tests/NormalTests/paczka1/small_fuzzy/71273062.err
Error in line 1: DOFDHHl A372 66,6
Error in line 2: QuU S676 77,7
Error in line 13: A372 A672 5,5
